--- a/Code/Bill.Dapper/Bill.Dapper.csproj
+++ b/Code/Bill.Dapper/Bill.Dapper.csproj
@@ -34,10 +34,14 @@
     <Reference Include="Dapper, Version=1.50.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Dapper.1.50.7\lib\net451\Dapper.dll</HintPath>
     </Reference>
+    <Reference Include="DapperExtensions, Version=1.6.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DapperExtensions.1.6.3\lib\net45\DapperExtensions.dll</HintPath>
+    </Reference>
     <Reference Include="DapperLambda, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\DapperLambda.1.0.0.0\lib\net45\DapperLambda.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -47,11 +51,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="MsSqlDatabase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Bill.Common\Bill.Common.csproj">
+      <Project>{004cb0bd-cfd8-4bfa-b2af-f23d1fdca17a}</Project>
+      <Name>Bill.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Bill.Data\Bill.Data.csproj">
+      <Project>{29fa7c18-8e73-4a90-91a6-6efd3542555a}</Project>
+      <Name>Bill.Data</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
