--- a/Code/Bill.Web/Web.config
+++ b/Code/Bill.Web/Web.config
@@ -4,8 +4,13 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <configSections>
+    <section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection,
+             Microsoft.Practices.Unity.Configuration" />
+  </configSections>
   <connectionStrings configSource="XmlConfig\connectionStrings.config"/>
   <appSettings configSource="XmlConfig\appSettings.config"/>
+  <unity configSource="XmlConfig\unity.config"/>
   <!--<appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
