--- a/Code/Bill.Web/Web.config
+++ b/Code/Bill.Web/Web.config
@@ -8,9 +8,16 @@
     <section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection,
              Microsoft.Practices.Unity.Configuration" />
   </configSections>
+  <unity xmlns="http://schemas.microsoft.com/practces/2010/unity">
+    <containers>
+      <container name="defaultContainer">
+        <register type="Bill.Data.IAA,Bill.Data"  mapTo="Bill.Dapper.AA,Bill.Dapper" name="a"></register>
+      </container>
+    </containers>
+  </unity>
   <connectionStrings configSource="XmlConfig\connectionStrings.config"/>
   <appSettings configSource="XmlConfig\appSettings.config"/>
-  <unity configSource="XmlConfig\unity.config"/>
+
   <!--<appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
