--- a/Code/Bill.Web/XmlConfig/unity.config
+++ b/Code/Bill.Web/XmlConfig/unity.config
@@ -4,7 +4,7 @@
   <containers>
     <container name="DbContainer">
       <!--Dapper的SqlServer-->
-      <register type="Bill.Data.IDatabase,Bill.Data"  mapTo="Bill.Dapper.MsSqlDatabase,cs" name="SqlServer"></register>
+      <register type="Bill.Data.IDatabase,Bill.Data"  mapTo="Bill.Dapper.MsSqlDatabase,Bill.Dapper" name="SqlServer"></register>
     </container>
   </containers>
 </unity>
