--- a/Code/Bill.Common/Bill.Common.csproj
+++ b/Code/Bill.Common/Bill.Common.csproj
@@ -57,8 +57,10 @@
     <Compile Include="ConfigHelper.cs" />
     <Compile Include="Extension\StringExtension.cs" />
     <Compile Include="Model\PaginationQuery.cs" />
+    <Compile Include="PublicHelper.cs" />
     <Compile Include="UnityIocHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ValidateReg.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
