--- a/Code/Bill.Common/Bill.Common.csproj
+++ b/Code/Bill.Common/Bill.Common.csproj
@@ -44,8 +44,11 @@
       <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -54,8 +57,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DateTimeHelper.cs" />
+    <Compile Include="Attribute\EntityAttributeHelper.cs" />
     <Compile Include="ConfigHelper.cs" />
+    <Compile Include="CookieHelper.cs" />
     <Compile Include="Extension\StringExtension.cs" />
+    <Compile Include="LambdaToSQL\ExpressionVisitor.cs" />
+    <Compile Include="LambdaToSQL\ExpressionWriterSql.cs" />
+    <Compile Include="LambdaToSQL\LambdaExpConditions.cs" />
+    <Compile Include="LambdaToSQL\PartialEvaluator.cs" />
+    <Compile Include="LambdaToSQL\ReflectionExtensions.cs" />
+    <Compile Include="LambdaToSQL\TypeHelper.cs" />
     <Compile Include="Model\PaginationQuery.cs" />
     <Compile Include="PublicHelper.cs" />
     <Compile Include="UnityIocHelper.cs" />
