--- a/Code/Bill.Data/Bill.Data.csproj
+++ b/Code/Bill.Data/Bill.Data.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IAA.cs" />
+    <Compile Include="DatabaseCommon.cs" />
     <Compile Include="IDatabase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
