--- a/Code/Bill.Web/Bill.Web.csproj
+++ b/Code/Bill.Web/Bill.Web.csproj
@@ -129,6 +129,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\Filters\ActionFilter.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\BillsController.cs" />
     <Compile Include="Controllers\BillsTypeController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
@@ -139,9 +140,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Css\Bills.css" />
     <Content Include="Content\Css\billsType.css" />
     <Content Include="Content\Css\login.css" />
     <Content Include="Content\Css\main.css" />
+    <Content Include="Content\Scripts\Bill\Bills.js" />
     <Content Include="Content\Scripts\Bill\BillsType.js" />
     <Content Include="Content\Scripts\Bill\BillsTypeEdit.js" />
     <Content Include="Content\Scripts\Bill\Common\CookieHelper.js" />
@@ -321,6 +324,8 @@
     <Content Include="Views\Login\Register.cshtml" />
     <Content Include="Views\BillsType\Index.cshtml" />
     <Content Include="Views\BillsType\Edit.cshtml" />
+    <Content Include="Views\Bills\Index.cshtml" />
+    <Content Include="Views\Bills\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
