--- a/Code/Bill.BLL/Bill.BLL.csproj
+++ b/Code/Bill.BLL/Bill.BLL.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BillsBLL.cs" />
     <Compile Include="CommonBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
