--- a/Code/Bill.Common/Bill.Common.csproj
+++ b/Code/Bill.Common/Bill.Common.csproj
@@ -43,6 +43,9 @@
     <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
       <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -63,6 +66,8 @@
     <Compile Include="CookieHelper.cs" />
     <Compile Include="Extension\LambdaExtension.cs" />
     <Compile Include="Extension\StringExtension.cs" />
+    <Compile Include="FilesHelper.cs" />
+    <Compile Include="JsonHelper.cs" />
     <Compile Include="LambdaToSQL\ExpressionVisitor.cs" />
     <Compile Include="LambdaToSQL\ExpressionWriterSql.cs" />
     <Compile Include="LambdaToSQL\LambdaExpConditions.cs" />
