--- a/Code/app/package.json
+++ b/Code/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "cookbook",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -17,10 +17,13 @@
     "@vue/cli-plugin-babel": "^3.5.0",
     "@vue/cli-plugin-eslint": "^3.5.0",
     "@vue/cli-service": "^3.5.0",
+    "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-plugin-component": "^1.1.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "less": "^3.0.4",
+    "less-loader": "^4.1.0",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
@@ -30,7 +33,7 @@
     },
     "extends": [
       "plugin:vue/essential",
-      "eslint:recommended"
+      "@vue/standard"
     ],
     "rules": {},
     "parserOptions": {
